# freee-mcp

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  run_server.sh  test_freee_mcp.py
.claude/skills/subscription-analyzer/: SKILL.md  patterns.yml
src/: __init__.py  auth.py  freee_client.py  server.py  token_store.py  tools.py
